--- a/package.json
+++ b/package.json
@@ -11,47 +11,47 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^6.1.10",
+    "@angular/animations": "^7.2.9",
     "@angular/cdk": "^7.3.4",
-    "@angular/common": "^6.1.0",
-    "@angular/compiler": "^6.1.0",
-    "@angular/core": "^6.1.0",
-    "@angular/forms": "^6.1.0",
-    "@angular/http": "^6.1.0",
+    "@angular/common": "^7.2.9",
+    "@angular/compiler": "^7.2.9",
+    "@angular/core": "^7.2.9",
+    "@angular/forms": "^7.2.9",
+    "@angular/http": "^7.2.9",
     "@angular/material": "^7.3.4",
-    "@angular/platform-browser": "^6.1.0",
-    "@angular/platform-browser-dynamic": "^6.1.0",
-    "@angular/router": "^6.1.0",
-    "@fortawesome/react-fontawesome": "^0.1.3",
-    "@ng-bootstrap/ng-bootstrap": "^4.0.0",
+    "@angular/platform-browser": "^7.2.9",
+    "@angular/platform-browser-dynamic": "^7.2.9",
+    "@angular/router": "^7.2.9",
+    "@fortawesome/react-fontawesome": "^0.1.4",
+    "@ng-bootstrap/ng-bootstrap": "^4.1.0",
     "angular-font-awesome": "^3.1.2",
-    "bootstrap": "^4.1.3",
-    "core-js": "^2.5.4",
+    "bootstrap": "^4.3.1",
+    "core-js": "^2.6.5",
     "font-awesome": "^4.7.0",
     "jquery": "^3.3.1",
-    "ngx-bootstrap": "^3.0.1",
-    "rxjs": "~6.2.0",
-    "zone.js": "~0.8.26"
+    "ngx-bootstrap": "^3.2.0",
+    "rxjs": "~6.4.0",
+    "zone.js": "~0.8.29"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.13.1",
-    "@angular/cli": "~6.2.3",
-    "@angular/compiler-cli": "^6.1.0",
-    "@angular/language-service": "^6.1.0",
-    "@types/jasmine": "~2.8.8",
-    "@types/jasminewd2": "~2.0.3",
-    "@types/node": "~8.9.4",
-    "codelyzer": "~4.3.0",
-    "jasmine-core": "~2.99.1",
+    "@angular-devkit/build-angular": "^0.13.6",
+    "@angular/cli": "~7.3.6",
+    "@angular/compiler-cli": "^7.2.9",
+    "@angular/language-service": "^7.2.9",
+    "@types/jasmine": "~3.3.10",
+    "@types/jasminewd2": "~2.0.6",
+    "@types/node": "~11.11.3",
+    "codelyzer": "~4.5.0",
+    "jasmine-core": "~3.3.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~3.0.0",
+    "karma": "~4.0.1",
     "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "~2.0.1",
-    "karma-jasmine": "~1.1.2",
-    "karma-jasmine-html-reporter": "^0.2.2",
-    "protractor": "~5.4.0",
-    "ts-node": "~7.0.0",
-    "tslint": "~5.11.0",
-    "typescript": "~2.9.2"
+    "karma-coverage-istanbul-reporter": "~2.0.5",
+    "karma-jasmine": "~2.0.1",
+    "karma-jasmine-html-reporter": "^1.4.0",
+    "protractor": "~5.4.2",
+    "ts-node": "~8.0.3",
+    "tslint": "~5.14.0",
+    "typescript": "3.2.4"
   }
 }
