--- a/package.json
+++ b/package.json
@@ -1,13 +1,16 @@
 {
   "name": "jogging-app",
   "version": "0.0.0",
+  "main": "main.js",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "start:electron": "ng build --base-href ./ && electron .",
+    "build:electron": "electron-packager . --platform=win32 --no-prune --ignore=/node_modules --ignore=/e2e --ignore=/src"
   },
   "private": true,
   "dependencies": {
@@ -42,6 +45,9 @@
     "@types/jasminewd2": "~2.0.6",
     "@types/node": "~11.11.3",
     "codelyzer": "~4.5.0",
+    "cross-var": "^1.1.0",
+    "electron": "^5.0.7",
+    "electron-packager": "^14.0.2",
     "jasmine-core": "~3.3.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~4.0.1",
